Fix alignment of title slides

--- a/slides.css
+++ b/slides.css
@@ -24,6 +24,7 @@ html {
 }
 
 h1 {
+    text-align: center;
     font-size: 2.5rem;
 }
 
